[gd_scene load_steps=5 format=3 uid="uid://dumqjav7rj0kh"]

[ext_resource type="Script" path="res://scripts/bosses/machine_candidate.gd" id="1_machine"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(100, 100)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_1"]
size = Vector2(100, 100)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.8, 0.2, 0.2, 1)

[node name="MachineCandidate" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 25
script = ExtResource("1_machine")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.6, 0.6, 0.6, 1)
texture = SubResource("PlaceholderTexture2D_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = -60.0
theme_override_styles/fill = SubResource("StyleBoxFlat_1")
value = 100.0
show_percentage = false

[node name="PropagandaWall" type="Node2D" parent="."]

[node name="DroneSpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Marker2D" parent="DroneSpawnPoints"]
position = Vector2(-300, -200)

[node name="SpawnPoint2" type="Marker2D" parent="DroneSpawnPoints"]
position = Vector2(300, -200)

[node name="SpawnPoint3" type="Marker2D" parent="DroneSpawnPoints"]
position = Vector2(-300, 200)

[node name="SpawnPoint4" type="Marker2D" parent="DroneSpawnPoints"]
position = Vector2(300, 200)

[node name="TruthNodes" type="Node2D" parent="."]
